--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -29,6 +29,8 @@ cask "iterm2"
 ## ========== Fonts ==========
 tap "homebrew/cask-fonts"
 cask "font-fira-code-nerd-font"
+cask "font-hackgen"
+cask "font-hackgen-nerd"
 
 ## ========= Utility ==========
 cask "1password"
@@ -36,6 +38,7 @@ cask "alfred"
 cask "alt-tab"
 cask "deepl"
 cask "fuwari"
+cask "kap"
 cask "karabiner-elements"
 cask "keycastr"
 cask "monitorcontrol"
@@ -50,6 +53,7 @@ cask "android-studio"
 cask "android-sdk"
 cask "android-platform-tools"
 brew "cocoapods"
+brew "diff-so-fancy"
 brew "docker"
 brew "git"
 brew "gh"
@@ -61,6 +65,7 @@ tap "adoptopenjdk/openjdk"
 brew "anyenv"
 brew "deno"
 brew "openjdk"
+brew "php"
 brew "python"
 brew "rustup"
 brew "sbt"
