--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -7,6 +7,7 @@
 	pager = diff-so-fancy | less --tabs=4 -RFX
 	autocrlf = false
 	quotepath = false
+	excludesfile = ~/.gitignore_global
 [color]
 	ui = true
 [interactive]
