--- a/config/starship.toml
+++ b/config/starship.toml
@@ -207,8 +207,8 @@ symbol = "ﯣ "
 # style = "#cfcfcf"
 
 
-[custom.weeknumber]
-command = """ echo "[$(date +%Y).$(echo-week-number).x]" """
-format = " [$output]($style) "
-when = """string match '*unipos*' $PWD"""
-style = "#cfcfcf"
+# [custom.weeknumber]
+# command = """ echo "[$(date +%Y).$(echo-week-number).x]" """
+# format = " [$output]($style) "
+# when = """string match '*unipos*' $PWD"""
+# style = "#cfcfcf"
