--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -35,3 +35,9 @@
 	repo = /Users/kohei_watanabe/ghq/github.com/unipos/client-web
 [maintenance]
 	repo = /Users/kohei_watanabe/ghq/github.com/unipos/client-web
+[merge]
+	conflictstyle = zdiff3
+[rerere]
+	enabled = true
+[diff]
+	algorithm = histogram
