--- a/config/lazygit.yml
+++ b/config/lazygit.yml
@@ -2,7 +2,7 @@
 git:
   paging:
     colorArg: always
-    externalDiffCommand: difft --color=always
+    # externalDiffCommand: difft --color=always
 gui:
   showIcons: true
   sidePanelWidth: 0.25
