--- a/config/nvim/.luarc.json
+++ b/config/nvim/.luarc.json
@@ -1,5 +1,6 @@
 {
-    "diagnostics.globals": [
-        "vim"
-    ]
+  "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
+  "workspace": {
+    "library": ["lua", "$VIMRUNTIME"]
+  }
 }
