--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,57 +1,80 @@
 # ~/.config/starship.toml
 # https://starship.rs/ja-jp/config/
 
+# format = """
+# $username\
+# $hostname\
+# $shlvl\
+# $kubernetes\
+# $directory\
+# $git_branch$git_commit$git_state$git_metrics$git_status$hg_branch\
+# $docker_context\
+# $package\
+# $cmake\
+# $dart\
+# $deno\
+# $dotnet\
+# $elixir\
+# $elm\
+# $erlang\
+# $golang\
+# $helm\
+# $java\
+# $julia\
+# $kotlin\
+# $nim\
+# $nodejs\
+# $ocaml\
+# $perl\
+# $php\
+# $purescript\
+# $python\
+# $red\
+# $ruby\
+# $rust\
+# $scala\
+# $swift\
+# $terraform\
+# $vlang\
+# $vagrant\
+# $zig\
+# $nix_shell\
+# $conda\
+# $memory_usage\
+# $aws\
+# $gcloud\
+# $openstack\
+# $env_var\
+# $crystal\
+# $cmd_duration\
+# $custom\
+# $line_break\
+# $lua\
+# $jobs\
+# $battery\
+# $time\
+# $status\
+# $shell\
+# $character"""
+
+
 format = """
 $username\
 $hostname\
 $shlvl\
-$kubernetes\
 $directory\
 $git_branch$git_commit$git_state$git_metrics$git_status$hg_branch\
-$docker_context\
 $package\
-$cmake\
-$dart\
 $deno\
-$dotnet\
-$elixir\
 $elm\
-$erlang\
 $golang\
-$helm\
-$java\
-$julia\
-$kotlin\
-$nim\
 $nodejs\
-$ocaml\
-$perl\
-$php\
-$purescript\
 $python\
-$red\
-$ruby\
 $rust\
-$scala\
-$swift\
-$terraform\
-$vlang\
-$vagrant\
-$zig\
-$nix_shell\
-$conda\
-$memory_usage\
-$aws\
-$gcloud\
-$openstack\
 $env_var\
-$crystal\
-$cmd_duration\
 $custom\
 $line_break\
 $lua\
-$jobs\
-$battery\
 $time\
 $status\
 $shell\
@@ -199,16 +222,3 @@ symbol = " "
 format = "[$symbol($version)]($style) "
 version_format = "v${major}.${minor}"
 symbol = "ﯣ "
-
-# [custom.unipos]
-# command = """echo "PROJECT=$PROJECT" """
-# format = "\n[$output]($style) "
-# when = """string match '*unipos*' $PWD"""
-# style = "#cfcfcf"
-
-
-# [custom.weeknumber]
-# command = """ echo "[$(date +%Y).$(echo-week-number).x]" """
-# format = " [$output]($style) "
-# when = """string match '*unipos*' $PWD"""
-# style = "#cfcfcf"
