--- a/config/lazygit.yml
+++ b/config/lazygit.yml
@@ -10,7 +10,6 @@ gui:
   language: "en"
   timeFormat: "2006-01-02T15:04:05Z07:00" # '02 Jan 06 15:04 MST' # https://pkg.go.dev/time#Time.Format
   commandLogSize: 16
-
 # https://github.com/jesseduffield/lazygit/blob/master/docs/Custom_Command_Keybindings.md
 customCommands:
   - key: null
@@ -47,5 +46,5 @@ customCommands:
 
 keybinding:
   universal:
-    openRecentRepos: null # '<c-r>'
-    commitChangesWithEditor: null # 'C'
+    openRecentRepos: <disabled> # '<c-r>'
+    commitChangesWithEditor: <disabled> # 'C'
