--- a/dot_config/sheldon/plugins.toml
+++ b/dot_config/sheldon/plugins.toml
@@ -29,13 +29,18 @@ apply = ['defer']
 github = 'zdharma/fast-syntax-highlighting'
 apply = ['defer']
 
-[plugins.zsh-abbr]
-github = 'olets/zsh-abbr'
-apply = ['source']
+# [plugins.zsh-abbr]
+# github = 'olets/zsh-abbr'
+# apply = ['source']
 
 [plugins.evalcache]
 github = 'mroth/evalcache'
 apply = ['source']
+
+[plugins.pnpm-shell-completion]
+github = 'g-plane/pnpm-shell-completion'
+apply = ['defer']
+# cd ~/.local/share/sheldon/repos/github.com/g-plane/pnpm-shell-completion/ && ./zplug.zsh
 
 # For example:
 #
