--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -27,4 +27,14 @@ bind -T copy-mode-vi v send -X begin-selection
 # 'C-v' で矩形選択 
 bind -T copy-mode-vi C-v send -X rectangle-toggle
 
+set-option -gw xterm-keys on
+
+# 256色モードを有効にする
+# set -g default-terminal 'screen-256color'
+set -g default-terminal "alacritty"
+set-option -ga terminal-overrides ',alacritty:RGB'
+# weztermで色をいい感じにするために必要
+set -ag terminal-overrides ",xterm-256color:RGB"
+set -ag terminal-features ",sync"
+
 run '~/.config/tmux/plugins/tpm/tpm'
