--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -9,6 +9,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'dracula/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+set -g @resurrect-dir '~/.tmux/resurrect'
+
 set -g @dracula-plugins "battery cpu-usage ram-usage weather time"
 set -g @dracula-show-location false
 set -g @dracula-show-fahrenheit false
@@ -17,24 +19,30 @@ set -g @dracula-show-flags true
 set -g @dracula-military-time true
 
 set -g mouse on
-
 set -g status on
 set -g status-keys vi
 
 setw -g mode-keys vi
-# 'v' で選択
+set -g xterm-keys on
+
+set -g default-terminal "xterm-ghostty"
+set -ga terminal-overrides ',xterm-ghostty:RGB'
+set -ag terminal-features ",sync"
+
+bind '[' copy-mode
+bind ']' paste-buffer
 bind -T copy-mode-vi v send -X begin-selection
-# 'C-v' で矩形選択 
 bind -T copy-mode-vi C-v send -X rectangle-toggle
 
-set-option -gw xterm-keys on
+bind -n 'C-S-Enter' resize-pane -Z
 
-# 256色モードを有効にする
-# set -g default-terminal 'screen-256color'
-set -g default-terminal "alacritty"
-set-option -ga terminal-overrides ',alacritty:RGB'
-# weztermで色をいい感じにするために必要
-set -ag terminal-overrides ",xterm-256color:RGB"
-set -ag terminal-features ",sync"
+bind -n M-c new-window -c "#{pane_current_path}"
+bind -n M-L next-window
+bind -n M-H previous-window
+bind -n M-J switch-client -n
+bind -n M-K switch-client -p
+
+bind -n M-v split-window -h -c "#{pane_current_path}"
+bind -n M-s split-window -v -c "#{pane_current_path}"
 
 run '~/.config/tmux/plugins/tpm/tpm'
