--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -11,12 +11,13 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @resurrect-dir '~/.tmux/resurrect'
 
-set -g @dracula-plugins "battery cpu-usage ram-usage weather time"
+set -g @dracula-plugins "custom:macos_music.sh battery cpu-usage ram-usage weather time"
 set -g @dracula-show-location false
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-timezone false
 set -g @dracula-show-flags true
 set -g @dracula-military-time true
+set -g @dracula-show-left-icon "#S"
 
 set -g mouse on
 set -g status on
@@ -29,8 +30,6 @@ set -g default-terminal "xterm-ghostty"
 set -ga terminal-overrides ',xterm-ghostty:RGB'
 set -ag terminal-features ",sync"
 
-bind '[' copy-mode
-bind ']' paste-buffer
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi C-v send -X rectangle-toggle
 
