--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,12 @@ indent_size = 4
 charset = utf-8
 max_line_length = 120
 
+[*.md]
+indent_size = 2
+trim_trailing_whitespace = false
+
+[*.{js,ts}]
+indent_size = 2
+
 [*.lua]
 indent_size = 2
