--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -8,9 +8,9 @@ background-opacity = 0.93
 background-blur-radius = 10
 resize-overlay = never
 
-font-family = Liga HackGen35Nerd
+# font-family = HackGen35 Console NF
 font-thicken = true
-adjust-cell-height = 10%
+# adjust-cell-height = 10%
 
 macos-titlebar-style = hidden
 
