--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -12,6 +12,9 @@ resize-overlay = never
 font-thicken = true
 # adjust-cell-height = 10%
 
+# font-feature = -calt
+font-feature = -dlig
+
 macos-titlebar-style = hidden
 
 mouse-hide-while-typing = true
