--- a/.chezmoiexternal.yaml
+++ b/.chezmoiexternal.yaml
@@ -4,3 +4,44 @@
     exact: true
     stripComponents: 1
     refreshPeriod: 168h
+
+".config/zellij/plugins/zjstatus.wasm":
+    type: file
+    url: https://github.com/dj95/zjstatus/releases/latest/download/zjstatus.wasm
+    refreshPeriod: 168h
+
+".config/zellij/scripts/battery.sh":
+    type: file
+    url: https://raw.githubusercontent.com/dracula/tmux/master/scripts/battery.sh
+    executable: true
+    refreshPeriod: 720h
+
+".config/zellij/scripts/cpu_info.sh":
+    type: file
+    url: https://raw.githubusercontent.com/dracula/tmux/master/scripts/cpu_info.sh
+    executable: true
+    refreshPeriod: 720h
+
+".config/zellij/scripts/ram_info.sh":
+    type: file
+    url: https://raw.githubusercontent.com/dracula/tmux/master/scripts/ram_info.sh
+    executable: true
+    refreshPeriod: 720h
+
+".config/zellij/scripts/weather.sh":
+    type: file
+    url: https://raw.githubusercontent.com/dracula/tmux/master/scripts/weather.sh
+    executable: true
+    refreshPeriod: 720h
+
+".config/zellij/scripts/weather_wrapper.sh":
+    type: file
+    url: https://raw.githubusercontent.com/dracula/tmux/master/scripts/weather_wrapper.sh
+    executable: true
+    refreshPeriod: 720h
+
+".config/zellij/scripts/utils.sh":
+    type: file
+    url: https://raw.githubusercontent.com/dracula/tmux/master/scripts/utils.sh
+    executable: true
+    refreshPeriod: 720h
