--- a/dot_config/nvim/.luarc.json
+++ b/dot_config/nvim/.luarc.json
@@ -8,7 +8,8 @@
       "lua",
       "$VIMRUNTIME",
       "${3rd}/luv/library",
-      "${3rd}/busted/library"
+      "${3rd}/busted/library",
+      "$HOME/.local/share/nvim/lazy"
     ],
     "checkThirdParty": false
   }
