--- a/biome.json
+++ b/biome.json
@@ -1,20 +1,16 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+    "$schema": "https://biomejs.dev/schemas/2.0.0-beta.5/schema.json",
     "vcs": {
         "enabled": true,
         "clientKind": "git",
         "useIgnoreFile": true
     },
     "files": {
-        "ignoreUnknown": false,
-        "ignore": []
+        "ignoreUnknown": false
     },
     "formatter": {
         "enabled": true,
         "useEditorconfig": true
-    },
-    "organizeImports": {
-        "enabled": true
     },
     "linter": {
         "enabled": true,
