--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -1,6 +1,7 @@
 [tools]
 # Language
-deno = "latest"
+"npm:typescript" = "5.8.3"
+deno = "2.3.3"
 go = "1.24.3"
 lua-language-server = "3.14.0"
 node = "24.1.0"
@@ -11,6 +12,7 @@ ruby = "3.4.4"
 "npm:@fsouza/prettierd" = "0.26.1"
 "npm:@tailwindcss/language-server" = "0.14.19"
 "npm:@vlabo/cspell-lsp" = "1.1.2"
+"npm:css-variables-language-server" = "2.7.0"
 "npm:eslint_d" = "14.3.0"
 "npm:stylelint-lsp" = "2.0.1"
 "npm:typescript-language-server" = "4.3.4"
