--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -7,6 +7,7 @@ lua-language-server = "3.14.0"
 node = "24.1.0"
 python = "3.13.3"
 ruby = "3.4.4"
+rust = "1.87.0"
 
 "go:golang.org/x/tools/gopls" = { version = "0.18.1" }
 "npm:@biomejs/biome" = "2.0.0-beta.5"
