--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -19,6 +19,7 @@ rust = "1.87.0"
 "npm:stylelint-lsp" = "2.0.1"
 "npm:typescript-language-server" = "4.3.4"
 "npm:vscode-langservers-extracted" = "4.10.0"          # html,css,json,eslint,
+"npm:yaml-language-server" = "1.18.0"
 stylua = "2.1.0"
 
 # CLI tools (主に Homebrew で入れられないもの)
