--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -15,6 +15,7 @@ rust = "1.87.0"
 "npm:@tailwindcss/language-server" = "0.14.19"
 "npm:@vlabo/cspell-lsp" = "1.1.2"
 "npm:css-variables-language-server" = "2.7.0"
+"npm:cssmodules-language-server" = "1.5.1"
 "npm:eslint_d" = "14.3.0"
 "npm:pyright" = "1.1.401"
 "npm:stylelint-lsp" = "2.0.1"
