--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -1,19 +1,19 @@
 [tools]
 # Language
 "npm:typescript" = "5.8.3"
-deno = "2.3.3"
+deno = "2.4.2"
 go = "1.24.3"
-lua-language-server = "3.14.0"
-node = "24.1.0"
+lua-language-server = "3.15.0"
+node = "24.4.1"
 python = "3.13.3"
 ruby = "3.4.4"
-rust = "1.87.0"
+rust = "1.88.0"
 
-"go:golang.org/x/tools/gopls" = { version = "0.18.1" }
-"npm:@biomejs/biome" = "2.0.0-beta.5"
+"go:golang.org/x/tools/gopls" = "0.19.1"
+"npm:@biomejs/biome" = "2.1.2"
 "npm:@fsouza/prettierd" = "0.26.1"
-"npm:@tailwindcss/language-server" = "0.14.19"
-"npm:@vlabo/cspell-lsp" = "1.1.2"
+"npm:@tailwindcss/language-server" = "0.14.25"
+"npm:@vlabo/cspell-lsp" = "1.1.5"
 "npm:css-variables-language-server" = "2.7.0"
 "npm:cssmodules-language-server" = "1.5.1"
 "npm:eslint_d" = "14.3.0"
