--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -2,49 +2,48 @@
 
 # https://github.com/jesseduffield/lazygit/blob/master/docs/Config.md
 git:
-    paging:
-        colorArg: always
-        pager: delta --dark --paging=never
-
+  paging:
+    colorArg: always
+    pager: delta --dark --paging=never
 gui:
-    showIcons: true
-    nerdFontsVersion: "3"
-    sidePanelWidth: 0.25
-    language: "en"
-    timeFormat: "2006-01-02T15:04:05Z07:00" # '02 Jan 06 15:04 MST' # https://pkg.go.dev/time#Time.Format
-    commandLogSize: 16
+  showIcons: true
+  nerdFontsVersion: "3"
+  sidePanelWidth: 0.25
+  language: "en"
+  timeFormat: "2006-01-02T15:04:05Z07:00" # '02 Jan 06 15:04 MST' # https://pkg.go.dev/time#Time.Format
+  commandLogSize: 16
 # https://github.com/jesseduffield/lazygit/blob/master/docs/Custom_Command_Keybindings.md
 customCommands:
-    - key: "<c-r>"
-      command: "gh pr view {{.SelectedLocalBranch.Name}}"
-      context: "localBranches"
-      description: "view pull request"
-      subprocess: true
-    - key: "C"
-      context: "files"
-      command: "git commit-with-prompt"
-      description: "Commit changes using git editor"
-      subprocess: true
-    # - key: "m"
-    #   command: "gh pr merge {{.SelectedLocalBranch.Name}} -d {{index .PromptResponses 0}}"
-    #   context: "localBranches"
-    #   description: "merge pull request"
-    #   prompts:
-    #     - type: "menu"
-    #       title: "Select merge option"
-    #       options:
-    #         - value: "--merge"
-    #           name: "Create a merge commit"
-    #           description: "gh pr merge {{.SelectedLocalBranch.Name}} -d --merge -b ''"
-    #         - value: "--squash"
-    #           name: "Squash and merge"
-    #           description: "gh pr merge {{.SelectedLocalBranch.Name}} -d --squash -b ''"
-    #         - value: "--rebase"
-    #           name: "Rebase and merge"
-    #           description: "gh pr merge {{.SelectedLocalBranch.Name}} -d --rebase -b ''"
+  - key: "<c-r>"
+    command: "gh pr view {{.SelectedLocalBranch.Name}}"
+    context: "localBranches"
+    description: "view pull request"
+    output: terminal
+  - key: "C"
+    context: "files"
+    command: "git commit-with-prompt"
+    description: "Commit changes using git editor"
+    output: terminal
+# - key: "m"
+#   command: "gh pr merge {{.SelectedLocalBranch.Name}} -d {{index .PromptResponses 0}}"
+#   context: "localBranches"
+#   description: "merge pull request"
+#   prompts:
+#     - type: "menu"
+#       title: "Select merge option"
+#       options:
+#         - value: "--merge"
+#           name: "Create a merge commit"
+#           description: "gh pr merge {{.SelectedLocalBranch.Name}} -d --merge -b ''"
+#         - value: "--squash"
+#           name: "Squash and merge"
+#           description: "gh pr merge {{.SelectedLocalBranch.Name}} -d --squash -b ''"
+#         - value: "--rebase"
+#           name: "Rebase and merge"
+#           description: "gh pr merge {{.SelectedLocalBranch.Name}} -d --rebase -b ''"
 
 keybinding:
-    universal:
-        openRecentRepos: <disabled> # '<c-r>'
-    files:
-        commitChangesWithEditor: <disabled> # 'C'
+  universal:
+    openRecentRepos: <disabled> # '<c-r>'
+  files:
+    commitChangesWithEditor: <disabled> # 'C'
