--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -1,6 +1,6 @@
 [tools]
 # Language
-"npm:typescript" = "5.8.3"
+"npm:typescript" = "5.9.2"
 deno = "2.4.2"
 go = "1.24.3"
 lua-language-server = "3.15.0"
@@ -10,19 +10,20 @@ ruby = "3.4.4"
 rust = "1.88.0"
 
 "go:golang.org/x/tools/gopls" = "0.19.1"
-"npm:@biomejs/biome" = "2.1.2"
+"npm:@biomejs/biome" = "2.1.3"
 "npm:@fsouza/prettierd" = "0.26.1"
-"npm:@tailwindcss/language-server" = "0.14.25"
+"npm:@tailwindcss/language-server" = "0.14.26"
 "npm:@vlabo/cspell-lsp" = "1.1.5"
 "npm:css-variables-language-server" = "2.7.0"
 "npm:cssmodules-language-server" = "1.5.1"
 "npm:eslint_d" = "14.3.0"
+"npm:prettier" = "3.6.2"
 "npm:pyright" = "1.1.403"
 "npm:stylelint-lsp" = "2.0.1"
-"npm:typescript-language-server" = "4.3.4"
+"npm:typescript-language-server" = "4.4.0"
 "npm:vscode-langservers-extracted" = "4.10.0"  # html,css,json,eslint,
 "npm:yaml-language-server" = "1.18.0"
-ruff = "0.12.4"
+ruff = "0.12.7"
 stylua = "2.1.0"
 
 # CLI tools (主に Homebrew で入れられないもの)
