--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -24,6 +24,9 @@ customCommands:
     command: "git commit-with-prompt"
     description: "Commit changes using git editor"
     output: terminal
+  - command: "git push --no-verify -u"
+    description: "Push non-verified changes"
+    context: "global"
 # - key: "m"
 #   command: "gh pr merge {{.SelectedLocalBranch.Name}} -d {{index .PromptResponses 0}}"
 #   context: "localBranches"
