--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -10,8 +10,9 @@ ruby = "3.4.4"
 rust = "nightly"
 
 "go:golang.org/x/tools/gopls" = "0.19.1"
-"npm:@biomejs/biome" = "2.2.0"
-"npm:@fsouza/prettierd" = "0.26.1"
+"npm:@biomejs/biome" = "2.2.2"
+"npm:@fsouza/prettierd" = "0.26.2"
+"npm:@github/copilot-language-server" = "1.364.0"
 "npm:@tailwindcss/language-server" = "0.14.26"
 "npm:@vlabo/cspell-lsp" = "1.1.5"
 "npm:css-variables-language-server" = "2.7.0"
@@ -21,7 +22,7 @@ rust = "nightly"
 "npm:pyright" = "1.1.403"
 "npm:stylelint-lsp" = "2.0.1"
 "npm:typescript-language-server" = "4.4.0"
-"npm:vscode-langservers-extracted" = "4.10.0"  # html,css,json,eslint,
+"npm:vscode-langservers-extracted" = "4.10.0"     # html,css,json,eslint,
 "npm:yaml-language-server" = "1.18.0"
 ruff = "0.12.7"
 stylua = "2.1.0"
