--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -28,11 +28,12 @@ ruff = "0.12.7"
 stylua = "2.1.0"
 
 # CLI tools (主に Homebrew で入れられないもの)
+"go:github.com/rhysd/vim-startuptime" = { version = "latest" }
 "npm:@anthropic-ai/claude-code" = "latest"
 "npm:@google/gemini-cli" = "latest"
 "npm:@taplo/cli" = "latest"
 "npm:zenn-cli" = "latest"
-"go:github.com/rhysd/vim-startuptime" = { version = "latest" }
+watchexec = "latest"
 
 [settings]
 experimental = true
