--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -28,6 +28,7 @@ ruff = "0.12.7"
 stylua = "2.1.0"
 
 # CLI tools (主に Homebrew で入れられないもの)
+"cargo:https://github.com/itsjunetime/tdf.git" = "latest"
 "go:github.com/rhysd/vim-startuptime" = { version = "latest" }
 "npm:@anthropic-ai/claude-code" = "latest"
 "npm:@google/gemini-cli" = "latest"
