--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -1,7 +1,7 @@
 [tools]
 # Language
 "npm:typescript" = "5.9.2"
-deno = "2.5.0"
+deno = "2.5.2"
 go = "1.24.3"
 lua-language-server = "3.15.0"
 node = "24.4.1"
@@ -10,9 +10,9 @@ ruby = "3.4.4"
 rust = "nightly"
 
 "go:golang.org/x/tools/gopls" = "0.19.1"
-"npm:@biomejs/biome" = "2.2.3"
+"npm:@biomejs/biome" = "2.2.4"
 "npm:@fsouza/prettierd" = "0.26.2"
-"npm:@github/copilot-language-server" = "1.367.0"
+"npm:@github/copilot-language-server" = "1.377.0"
 "npm:@tailwindcss/language-server" = "0.14.26"
 "npm:@vlabo/cspell-lsp" = "1.1.5"
 "npm:css-variables-language-server" = "2.7.0"
@@ -21,9 +21,9 @@ rust = "nightly"
 "npm:prettier" = "3.6.2"
 "npm:pyright" = "1.1.403"
 "npm:stylelint-lsp" = "2.0.1"
-"npm:typescript-language-server" = "4.4.0"
+"npm:typescript-language-server" = "5.0.0"
 "npm:vscode-langservers-extracted" = "4.10.0"     # html,css,json,eslint,
-"npm:yaml-language-server" = "1.18.0"
+"npm:yaml-language-server" = "1.19.1"
 ruff = "0.12.7"
 stylua = "2.1.0"
 
@@ -31,6 +31,7 @@ stylua = "2.1.0"
 "cargo:https://github.com/itsjunetime/tdf.git" = "latest"
 "go:github.com/rhysd/vim-startuptime" = { version = "latest" }
 "npm:@anthropic-ai/claude-code" = "latest"
+"npm:@github/copilot" = "latest"
 "npm:@google/gemini-cli" = "latest"
 "npm:@taplo/cli" = "latest"
 "npm:zenn-cli" = "latest"
