--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -10,9 +10,9 @@ ruby = "3.4.4"
 rust = "nightly"
 
 "go:golang.org/x/tools/gopls" = "0.19.1"
-"npm:@biomejs/biome" = "2.2.4"
+"npm:@biomejs/biome" = "2.3.2"
 "npm:@fsouza/prettierd" = "0.26.2"
-"npm:@github/copilot-language-server" = "1.380.0"
+"npm:@github/copilot-language-server" = "1.389.0"
 "npm:@tailwindcss/language-server" = "0.14.26"
 "npm:@vlabo/cspell-lsp" = "1.1.5"
 "npm:css-variables-language-server" = "2.7.0"
@@ -32,6 +32,7 @@ stylua = "2.3.0"
 "go:github.com/rhysd/vim-startuptime" = { version = "latest" }
 "npm:@github/copilot" = "latest"
 "npm:@google/gemini-cli" = "latest"
+"npm:@openai/codex" = "latest"
 "npm:@taplo/cli" = "latest"
 "npm:zenn-cli" = "latest"
 watchexec = "latest"
