--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -2,9 +2,9 @@
 
 # https://github.com/jesseduffield/lazygit/blob/master/docs/Config.md
 git:
-  paging:
-    colorArg: always
-    pager: delta --dark --paging=never
+  pagers:
+    - colorArg: always
+      pager: delta --dark --paging=never
 gui:
   showIcons: true
   nerdFontsVersion: "3"
