--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -29,6 +29,7 @@ stylua = "2.3.0"
 
 # CLI tools (主に Homebrew で入れられないもの)
 "cargo:https://github.com/itsjunetime/tdf.git" = "latest"
+"cargo:https://github.com/skanehira/ghost.git" = "latest"
 "go:github.com/rhysd/vim-startuptime" = { version = "latest" }
 "npm:@github/copilot" = "latest"
 "npm:@google/gemini-cli" = "latest"
