--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -1,59 +1,100 @@
 # ~/.config/starship.toml
 # https://starship.rs/ja-jp/config/
 
+# Which is equivalent to
 # format = """
 # $username\
 # $hostname\
+# $localip\
 # $shlvl\
+# $singularity\
 # $kubernetes\
 # $directory\
-# $git_branch$git_commit$git_state$git_metrics$git_status$hg_branch\
+# $vcsh\
+# $fossil_branch\
+# $fossil_metrics\
+# $git_branch\
+# $git_commit\
+# $git_state\
+# $git_metrics\
+# $git_status\
+# $hg_branch\
+# $hg_state\
+# $pijul_channel\
 # $docker_context\
 # $package\
+# $c\
 # $cmake\
+# $cobol\
+# $daml\
 # $dart\
 # $deno\
 # $dotnet\
 # $elixir\
 # $elm\
 # $erlang\
+# $fennel\
+# $fortran\
+# $gleam\
 # $golang\
+# $guix_shell\
+# $haskell\
+# $haxe\
 # $helm\
 # $java\
 # $julia\
 # $kotlin\
+# $gradle\
+# $lua\
 # $nim\
 # $nodejs\
 # $ocaml\
+# $opa\
 # $perl\
 # $php\
+# $pulumi\
 # $purescript\
 # $python\
+# $quarto\
+# $raku\
+# $rlang\
 # $red\
 # $ruby\
 # $rust\
 # $scala\
+# $solidity\
 # $swift\
 # $terraform\
+# $typst\
 # $vlang\
 # $vagrant\
 # $zig\
+# $buf\
 # $nix_shell\
 # $conda\
+# $meson\
+# $spack\
 # $memory_usage\
 # $aws\
 # $gcloud\
 # $openstack\
+# $azure\
+# $nats\
+# $direnv\
 # $env_var\
+# $mise\
 # $crystal\
-# $cmd_duration\
 # $custom\
+# $sudo\
+# $cmd_duration\
 # $line_break\
-# $lua\
 # $jobs\
 # $battery\
 # $time\
 # $status\
+# $os\
+# $container\
+# $netns\
 # $shell\
 # $character"""
 
