--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -18,6 +18,7 @@ rust = "nightly"
 "npm:css-variables-language-server" = "2.8.3"
 "npm:cssmodules-language-server" = "1.5.2"
 "npm:eslint_d" = "14.3.0"
+"npm:oxlint" = "1.39.0"
 "npm:prettier" = "3.7.4"
 "npm:pyright" = "1.1.403"
 "npm:stylelint-lsp" = "2.0.1"
