--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -1,25 +1,25 @@
 [tools]
 # Language
 "npm:typescript" = "5.9.3"
-deno = "2.6.3"
-go = "1.25.5"
-lua-language-server = "3.16.2"
-node = "25.2.1"
-python = "3.13.3"
-ruby = "3.4.4"
+deno = "2.6.6"
+go = "1.25.6"
+lua-language-server = "3.17.1"
+node = "25.5.0"
+python = "3.14.2"
+ruby = "4.0.1"
 rust = "nightly"
 
-"go:golang.org/x/tools/gopls" = "0.19.1"
-"npm:@biomejs/biome" = "2.3.11"
+"go:golang.org/x/tools/gopls" = "0.21.0"
+"npm:@biomejs/biome" = "2.3.13"
 "npm:@fsouza/prettierd" = "0.26.2"
-"npm:@github/copilot-language-server" = "1.406.0"
+"npm:@github/copilot-language-server" = "1.418.0"
 "npm:@tailwindcss/language-server" = "0.14.29"
 "npm:@vlabo/cspell-lsp" = "1.1.5"
 "npm:css-variables-language-server" = "2.8.3"
 "npm:cssmodules-language-server" = "1.5.2"
 "npm:eslint_d" = "14.3.0"
-"npm:oxlint" = "1.41.0"
-"npm:prettier" = "3.7.4"
+"npm:oxlint" = "1.42.0"
+"npm:prettier" = "3.8.1"
 "npm:pyright" = "1.1.403"
 "npm:stylelint-lsp" = "2.0.1"
 "npm:typescript-language-server" = "5.1.3"
@@ -33,6 +33,7 @@ shfmt = "latest"
 # CLI tools (主に Homebrew で入れられないもの)
 "cargo:https://github.com/itsjunetime/tdf.git" = "latest"
 "cargo:https://github.com/skanehira/ghost.git" = "latest"
+"cargo:https://github.com/ushironoko/octorus.git" = "latest"
 "go:github.com/k1LoW/git-wt" = { version = "latest" }
 "go:github.com/nametake/golangci-lint-langserver" = { version = "latest" }
 "go:github.com/rhysd/vim-startuptime" = { version = "latest" }
