--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -9,6 +9,7 @@ python = "3.14.2"
 ruby = "4.0.1"
 rust = "nightly"
 
+"cargo:https://github.com/skanehira/version-lsp.git" = "latest"
 "go:golang.org/x/tools/gopls" = "0.21.0"
 "npm:@biomejs/biome" = "2.3.13"
 "npm:@fsouza/prettierd" = "0.26.2"
@@ -23,12 +24,12 @@ rust = "nightly"
 "npm:pyright" = "1.1.403"
 "npm:stylelint-lsp" = "2.0.1"
 "npm:typescript-language-server" = "5.1.3"
-"npm:vscode-langservers-extracted" = "4.10.0"     # html,css,json,eslint,
+"npm:vscode-langservers-extracted" = "4.10.0"                   # html,css,json,eslint,
 "npm:yaml-language-server" = "1.19.2"
 golangci-lint = "2.8.0"
 ruff = "0.14.9"
-stylua = "2.3.1"
 shfmt = "latest"
+stylua = "2.3.1"
 
 # CLI tools (主に Homebrew で入れられないもの)
 "cargo:https://github.com/itsjunetime/tdf.git" = "latest"
